# wayback

./: CODE_OF_CONDUCT.md  LICENSE  README.md  meson.build  meson_options.txt  wayback.c
.github/workflows/: ci.yaml
doc/: Xwayback.scdoc  meson.build  wayback-session.scdoc
protocol/: meson.build
wayback-compositor/: meson.build  wayback-compositor.c
wayback-session/: meson.build  wayback-session.c
xwayback/: meson.build  xwayback.c
